<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">No Jam</string>
	<string name="bus">Bus</string>
	<string name="cancel">Cancel</string>
	<string name="connecting_to_the_server">Connecting to the server...</string>
	<string name="email">E-mail</string>
	<string name="email_address">E-mail address</string>
	<string name="first_name">First name</string>
	<string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="join_today">Join today!</string>
	<string name="last_name">Last name</string>
    <string name="loading_map">Loading map...</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
	<string name="metro">Metro</string>
    <string name="new_to_nojam">New to NoJam ?</string>
	<string name="ok">Ok</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="profile_name">First, Last Name</string>
    <string name="route">Route</string>
	<string name="selected_route">Selected route</string>
	<string name="selected_types_of_transport">Selected types of transport</string>
    <string name="settings">Settings</string>
	<string name="train">train</string>
    <string name="transport">Transports</string>
    <string name="transport_type">Transport type</string>
    <string name="username">Username</string>

    <style name="menu_button">
	    <item name="android:background">#00000000</item>
		<item name="android:textColor">#000</item>
		<item name="android:paddingTop">24px</item>
		<item name="android:paddingBottom">24px</item>
		<item name="android:paddingLeft">36px</item>
		<item name="android:paddingRight">36px</item>
	    <item name="android:gravity">center_vertical|center_horizontal</item>
    </style>
    
    <style name="CustomWindowTitleBackground">
        <item name="android:background">#444444</item>
    </style>
    
    <style name="GraviolaTheme" parent="android:Theme">
        <item name="android:windowTitleSize">35dip</item>
        <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
    </style>
</resources>
