<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent" 
	android:orientation="vertical"
	android:background="#FFFFFF">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_margin="6dp">
		<ImageView android:layout_height="wrap_content" android:id="@+id/imageView1" android:layout_width="wrap_content" android:src="@drawable/profile_photo"></ImageView>
		
		<TextView android:id="@+id/profile_name"
			android:text="@string/profile_name"		
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_marginTop="24dip" 
			android:textColor="#000000" 
			android:gravity="right" 
			android:textSize="36dip" /> 
	</LinearLayout>
	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="1" 
    	android:layout_marginLeft="6dp"
    	android:layout_marginRight="6dp">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.5">
		    
		    <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/first_name"/>
		    <EditText android:id="@+id/first_name" 
		    	android:layout_height="wrap_content" 
			    android:layout_width="fill_parent" 
			    android:lines="1" 
			    android:singleLine="true" 
			    android:editable="false"/>
		</LinearLayout>		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="0.5">

		    <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/last_name"/>
		    <EditText android:id="@+id/last_name" 
		    	android:layout_height="wrap_content" 
			    android:layout_width="fill_parent" 
			    android:lines="1" 
			    android:singleLine="true" 
			    android:editable="false"/>
		</LinearLayout>
	</LinearLayout>
	 
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:text="@string/email_address" 
    	android:layout_marginLeft="6dp"
    	android:layout_marginRight="6dp"/>
    <EditText android:id="@+id/email_address"     
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:singleLine="true" 
    	android:layout_marginLeft="6dp"
    	android:layout_marginRight="6dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/username"
		android:layout_marginTop="18dp" 
    	android:layout_marginLeft="6dp"
    	android:layout_marginRight="6dp"/>
    <EditText android:id="@+id/username"     
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:singleLine="true" 
    	android:layout_marginLeft="6dp"
    	android:layout_marginRight="6dp"
    	android:layout_marginBottom="6dp"/>
</LinearLayout>